--- a/less/style.less
+++ b/less/style.less
@@ -35,6 +35,10 @@
 <!--                                                            -->
 */  
 
+@wit:         #fff;
+@facebook:    #3C5A99;
+@satansrood:  #a00; 
+
 //=========================================================================================================
 
 .visuallyhidden() {
@@ -62,7 +66,6 @@
 }
 
 //=========================================================================================================
-
 /* Define the "system" font family */
 @font-face {
   font-family: system;
@@ -71,14 +74,42 @@
   src: local(".SFNSText-Light"), local(".HelveticaNeueDeskInterface-Light"), local(".LucidaGrandeUI"), local("Ubuntu Light"), local("Segoe UI Light"), local("Roboto-Light"), local("DroidSans"), local("Tahoma");
 }
 
+@font-face {
+    font-family: 'regular-sans';
+    src: url('fonts/PTS55F-webfont.eot');
+    src: url('fonts/PTS55F-webfont.eot?#iefix') format('embedded-opentype'),
+         url('fonts/PTS55F-webfont.woff2') format('woff2'),
+         url('fonts/PTS55F-webfont.woff') format('woff'),
+         url('fonts/PTS55F-webfont.ttf') format('truetype'),
+         url('fonts/PTS55F-webfont.svg#pt_sansregular') format('svg');
+    font-weight: normal;
+    font-style: normal;
+
+}
+
+@font-face {
+    font-family: 'regular-bold';
+    src: url('fonts/PTS75F-webfont.eot');
+    src: url('fonts/PTS75F-webfont.eot?#iefix') format('embedded-opentype'),
+         url('fonts/PTS75F-webfont.woff2') format('woff2'),
+         url('fonts/PTS75F-webfont.woff') format('woff'),
+         url('fonts/PTS75F-webfont.ttf') format('truetype'),
+         url('fonts/PTS75F-webfont.svg#pt_sansbold') format('svg');
+    font-weight: normal;
+    font-style: normal;
+
+}
+
+
+
 html,
 body {
   width: 100%;
   height: 100%;
 }
 body {
-  font-family: "system";
-  background: #3C5A99;
+  font-family: 'regular-sans', system, sans serif;
+  background: @facebook;
   color: white;
   margin: 0;
   padding: 0;
@@ -88,10 +119,26 @@ h1 {
   margin: 0 0 .5em 0;
   padding: 0;
 }
+a,
+p,
+h1 {
+  color: @wit;
+}
+
+a {
+  &:hover,
+  &:active,
+  &:focus {
+    color: @satansrood;
+    background: @wit;
+  }
+}
+
 h1 {
   font-size: 300%;
   text-transform: uppercase;
   font-weight: 700;
+  font-family: 'regular-bold', system, sans serif;
 }
 article {
   display: block;
